fix: remove focus state from tertiary variant button on mobile

--- a/crowdsource-fe/src/components/Button/Button.module.scss
+++ b/crowdsource-fe/src/components/Button/Button.module.scss
@@ -96,7 +96,9 @@
 
   &:hover,
   &:active {
-    background-color: var(--btn-grey-color);
+    @include media-breakpoint-up(md) {
+      background-color: var(--btn-grey-color);
+    }
   }
 
   &:disabled {
